change methods: deleteTaskState and changeTaskStatePosition