@@ -5,7 +5,6 @@ import com.example.task_tracker_api.API.dto.AskDTO;
 import com.example.task_tracker_api.API.dto.TaskStateDTO;
 import com.example.task_tracker_api.API.exception.BadRequestException;
 import com.example.task_tracker_api.API.exception.NotFoundException;
-import com.example.task_tracker_api.API.factories.TaskDtoFactory;
 import com.example.task_tracker_api.API.factories.TaskStateDtoFactory;
 import com.example.task_tracker_api.store.entities.ProjectEntity;
 import com.example.task_tracker_api.store.entities.TaskStateEntity;
@@ -17,7 +16,6 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
 
 @RequiredArgsConstructor
@@ -33,46 +31,42 @@ public class TaskStateController {
     ControllerHelper controllerHelper;
 
 
+
     public static final String GET_TASK_STATES = "/api/projects/{project_id}/task-states";
     public static final String CREATE_TASK_STATE = "/api/projects/{project_id}/task-states";
     public static final String UPDATE_TASK_STATE = "/api/task-states/{task_state_id}";
     public static final String CHANGE_TASK_STATE_POSITION = "/api/task-states/{task_state_id}/position/change";
     public static final String DELETE_TASK_STATE = "/api/task-states/{task_state_id}";
 
-
-
-
     @GetMapping(GET_TASK_STATES)
-    public List<TaskStateDTO> getTaskStates(@PathVariable("project_id") Long projectId) {
+    public List<TaskStateDTO> getTaskStates(@PathVariable(name = "project_id") Long projectId) {
 
         ProjectEntity project = controllerHelper.getProjectOrThrowException(projectId);
 
         return project
                 .getTaskState()
                 .stream()
-                .map(taskStateDtoFactory :: makeTaskStateDto)
+                .map(taskStateDtoFactory::makeTaskStateDto)
                 .toList();
     }
 
     @PostMapping(CREATE_TASK_STATE)
-    public TaskStateDTO createTaskState(
-            @PathVariable("project_id") Long projectId,
-            @RequestParam("task_state_name") String taskStateName) {
+    public TaskStateDTO createTaskSate(
+            @PathVariable(name = "project_id") Long projectId,
+            @RequestParam(name = "task_state_name") String taskStateName) {
 
-        if (taskStateName.isBlank()) {
-            throw new BadRequestException("Task state name can't be empty");
+        if (taskStateName.trim().isEmpty()) {
+            throw new BadRequestException("Task state name can't be empty.");
         }
 
         ProjectEntity project = controllerHelper.getProjectOrThrowException(projectId);
 
         Optional<TaskStateEntity> optionalAnotherTaskState = Optional.empty();
 
-        for (TaskStateEntity taskState : project.getTaskState()) {
+        for (TaskStateEntity taskState: project.getTaskState()) {
 
             if (taskState.getName().equalsIgnoreCase(taskStateName)) {
-                throw new BadRequestException(
-                        String.format("Task State \"%s\" already exists.", taskStateName)
-                );
+                throw new BadRequestException(String.format("Task state \"%s\" already exists.", taskStateName));
             }
 
             if (!taskState.getRightTaskState().isPresent()) {
@@ -81,12 +75,12 @@ public class TaskStateController {
             }
         }
 
-        TaskStateEntity taskState = taskStateRepository
-                .saveAndFlush(TaskStateEntity.builder()
+        TaskStateEntity taskState = taskStateRepository.saveAndFlush(
+                TaskStateEntity.builder()
                         .name(taskStateName)
                         .project(project)
-                        .build());
-
+                        .build()
+        );
 
         optionalAnotherTaskState
                 .ifPresent(anotherTaskState -> {
@@ -105,11 +99,11 @@ public class TaskStateController {
 
     @PatchMapping(UPDATE_TASK_STATE)
     public TaskStateDTO updateTaskState(
-            @PathVariable("task_state_id") Long taskStateId,
-            @RequestParam("task_state_name") String taskStateName) {
+            @PathVariable(name = "task_state_id") Long taskStateId,
+            @RequestParam(name = "task_state_name") String taskStateName) {
 
-        if (taskStateName.isBlank()) {
-            throw new BadRequestException("Task state name can't be empty");
+        if (taskStateName.trim().isEmpty()) {
+            throw new BadRequestException("Task state name can't be empty.");
         }
 
         TaskStateEntity taskState = getTaskStateOrThrowException(taskStateId);
@@ -118,25 +112,23 @@ public class TaskStateController {
                 .findTaskStateEntityByProjectIdAndNameContainsIgnoreCase(
                         taskState.getProject().getId(),
                         taskStateName
-                ).
-                filter(anotherTaskState -> !anotherTaskState.getId().equals(taskStateId)).
-                ifPresent(anotherTaskState -> {
-                    throw new BadRequestException(
-                            String.format("Task State \"%s\" already exists.", taskStateName));
+                )
+                .filter(anotherTaskState -> !anotherTaskState.getId().equals(taskStateId))
+                .ifPresent(anotherTaskState -> {
+                    throw new BadRequestException(String.format("Task state \"%s\" already exists.", taskStateName));
                 });
-
 
         taskState.setName(taskStateName);
 
-       taskState = taskStateRepository.saveAndFlush(taskState);
+        taskState = taskStateRepository.saveAndFlush(taskState);
 
         return taskStateDtoFactory.makeTaskStateDto(taskState);
     }
 
     @PatchMapping(CHANGE_TASK_STATE_POSITION)
     public TaskStateDTO changeTaskStatePosition(
-            @PathVariable("task_state_id") Long taskStateId,
-            @RequestParam(value = "left_task_state_id", required = false) Optional<Long> optionalLeftTaskStateId) {
+            @PathVariable(name = "task_state_id") Long taskStateId,
+            @RequestParam(name = "left_task_state_id", required = false) Optional<Long> optionalLeftTaskStateId) {
 
         TaskStateEntity changeTaskState = getTaskStateOrThrowException(taskStateId);
 
@@ -150,61 +142,38 @@ public class TaskStateController {
             return taskStateDtoFactory.makeTaskStateDto(changeTaskState);
         }
 
-
-
-        Optional<TaskStateEntity>  optionalNewLeftTaskState = optionalLeftTaskStateId
+        Optional<TaskStateEntity> optionalNewLeftTaskState = optionalLeftTaskStateId
                 .map(leftTaskStateId -> {
 
                     if (taskStateId.equals(leftTaskStateId)) {
-                        throw new BadRequestException(
-                              "The left ID of the task status is equal to the changed task status"
-                        );
+                        throw new BadRequestException("Left task state id equals changed task state.");
                     }
 
                     TaskStateEntity leftTaskStateEntity = getTaskStateOrThrowException(leftTaskStateId);
 
                     if (!project.getId().equals(leftTaskStateEntity.getProject().getId())) {
-                        throw new BadRequestException("Task state position can be changed within the same project");
+                        throw new BadRequestException("Task state position can be changed within the same project.");
                     }
 
                     return leftTaskStateEntity;
-
                 });
 
         Optional<TaskStateEntity> optionalNewRightTaskState;
-
         if (!optionalNewLeftTaskState.isPresent()) {
 
-            optionalNewRightTaskState = project.getTaskState()
+            optionalNewRightTaskState = project
+                    .getTaskState()
                     .stream()
                     .filter(anotherTaskState -> !anotherTaskState.getLeftTaskState().isPresent())
                     .findAny();
-
         } else {
 
             optionalNewRightTaskState = optionalNewLeftTaskState
                     .get()
                     .getRightTaskState();
-
         }
 
-        Optional<TaskStateEntity> optionalOldLeftTaskState = changeTaskState.getLeftTaskState();
-        Optional<TaskStateEntity> optionalOldRightTaskState = changeTaskState.getRightTaskState();
-
-        optionalOldLeftTaskState
-                .ifPresent(it -> {
-                    it.setRightTaskState(optionalOldRightTaskState.orElse(null));
-
-                    taskStateRepository.saveAndFlush(it);
-                });
-
-        optionalOldRightTaskState
-                .ifPresent(it -> {it.setLeftTaskState(optionalOldLeftTaskState.orElse(null));
-
-                    taskStateRepository.saveAndFlush(it);
-                });
-
-
+        replaceOldTaskStatePosition(changeTaskState);
 
         if (optionalNewLeftTaskState.isPresent()) {
 
@@ -213,11 +182,9 @@ public class TaskStateController {
             newLeftTaskState.setRightTaskState(changeTaskState);
 
             changeTaskState.setLeftTaskState(newLeftTaskState);
-
         } else {
             changeTaskState.setLeftTaskState(null);
         }
-
 
         if (optionalNewRightTaskState.isPresent()) {
 
@@ -226,38 +193,67 @@ public class TaskStateController {
             newRightTaskState.setLeftTaskState(changeTaskState);
 
             changeTaskState.setRightTaskState(newRightTaskState);
-
         } else {
             changeTaskState.setRightTaskState(null);
         }
 
         changeTaskState = taskStateRepository.saveAndFlush(changeTaskState);
 
-        optionalNewRightTaskState
+        optionalNewLeftTaskState
                 .ifPresent(taskStateRepository::saveAndFlush);
 
-        optionalNewLeftTaskState
+        optionalNewRightTaskState
                 .ifPresent(taskStateRepository::saveAndFlush);
 
         return taskStateDtoFactory.makeTaskStateDto(changeTaskState);
     }
 
     @DeleteMapping(DELETE_TASK_STATE)
-    public AskDTO deleteTaskState(@PathVariable("task_state_id") Long taskStateId) {
+    public AskDTO deleteTaskState(@PathVariable(name = "task_state_id") Long taskStateId) {
 
+        TaskStateEntity changeTaskState = getTaskStateOrThrowException(taskStateId);
 
+        replaceOldTaskStatePosition(changeTaskState);
+
+        taskStateRepository.delete(changeTaskState);
 
         return AskDTO.makeDefault(true);
     }
 
+    private void replaceOldTaskStatePosition(TaskStateEntity changeTaskState) {
 
+        Optional<TaskStateEntity> optionalOldLeftTaskState = changeTaskState.getLeftTaskState();
+        Optional<TaskStateEntity> optionalOldRightTaskState = changeTaskState.getRightTaskState();
+
+        optionalOldLeftTaskState
+                .ifPresent(it -> {
+
+                    it.setRightTaskState(optionalOldRightTaskState.orElse(null));
+
+                    taskStateRepository.saveAndFlush(it);
+                });
+
+        optionalOldRightTaskState
+                .ifPresent(it -> {
+
+                    it.setLeftTaskState(optionalOldLeftTaskState.orElse(null));
+
+                    taskStateRepository.saveAndFlush(it);
+                });
+    }
 
     private TaskStateEntity getTaskStateOrThrowException(Long taskStateId) {
+
         return taskStateRepository
                 .findById(taskStateId)
                 .orElseThrow(() ->
                         new NotFoundException(
-                                String.format("Task status with %d not found", taskStateId))
+                                String.format(
+                                        "Task state with \"%s\" id doesn't exist.",
+                                        taskStateId
+                                )
+                        )
                 );
     }
+
 }
